# Alloy

./: .gitignore  CLAUDE.md  Package.swift  README.md  build.sh  bundle.sh  project.yml  run.sh
Alloy.xcodeproj/: project.pbxproj
Alloy.xcodeproj/xcshareddata/xcschemes/: Alloy.xcscheme
Alloy/App/: Alloy.entitlements  AlloyApp.swift  AppCommands.swift  AppDelegate.swift  Info.plist
Alloy/Core/: Document.swift  Selection.swift  TextBuffer.swift  UndoStack.swift
Alloy/Core/Bridge/: AlloyEngine.h  module.modulemap
Alloy/Core/Workspace/: TabGroup.swift  Workspace.swift
Alloy/KeyBindings/: DefaultKeyBindings.json  KeyBindingManager.swift
Alloy/UI/: MainWindowController.swift
Alloy/UI/Editor/: EditorTheme.swift  EditorView.swift  EditorViewController.swift  GutterView.swift
Alloy/UI/TabBar/: TabBarView.swift
AlloyTests/: AlloyTests.swift
Sources/Alloy/: Theme.swift
Sources/Alloy/App/: AppDelegate.swift  AppIcon.swift  main.swift
Sources/Alloy/Engine/: TextBuffer.swift
Sources/Alloy/Git/: GitService.swift
Sources/Alloy/KeyBindings/: KeyBindingManager.swift
Sources/Alloy/Model/: Document.swift
Sources/Alloy/Resources/: DefaultKeyBindings.json
Sources/Alloy/Terminal/: PTYProcess.swift  TerminalColor.swift  TerminalGrid.swift  TerminalSession.swift  TerminalView.swift  VTParser.swift
Sources/CAlloyEngine/: empty.c  shim.c
Sources/CPTY/: cpty.c
Sources/CPTY/include/: cpty.h  (+1 more)
alloy-engine/: Cargo.toml
alloy-engine/crates/alloy-text/: Cargo.toml  cbindgen.toml
alloy-engine/crates/alloy-text/src/: lib.rs
alloy-engine/include/: alloy_text.h
(+15 files in other folders)
